New Spelling: ConX

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conx Neural Networks\n",
+    "# ConX Neural Networks\n",
     "\n",
     "## The On-Ramp to Deep Learning\n",
     "\n",
@@ -15,10 +15,10 @@
     "  2. Use with Jupyter Notebooks\n",
     "  3. Troubleshooting\n",
     "  4. Examples\n",
-    "2. [Getting Started with Conx](Getting Started with conx.ipynb)\n",
+    "2. [Getting Started with ConX](Getting Started with conx.ipynb)\n",
     "  1. What is conx?\n",
     "  2. A Simple Network\n",
-    "  3. Conx options\n",
+    "  3. ConX options\n",
     "3. Examples\n",
     "  1. [Learning](Learning.ipynb)\n",
     "  2. [XOR Multiple Inputs/Targets](XOR.ipynb)\n",
