--- a/ActivationFunctions.ipynb
+++ b/ActivationFunctions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Activation Functions\n",
     "\n",
-    "This notebook explores the activation functions that are available in Conx.\n",
+    "This notebook explores the activation functions that are available in ConX.\n",
     "\n",
     "First, we import a special function `plot_f` that is designed to plot functions. We also import all of the activation functions:\n",
     "\n",
@@ -38,7 +38,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.10\n"
+      "ConX, version 3.6.10\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
    "source": [
     "## softmax\n",
     "\n",
-    "The `softmax` activation function takes a vector of input values and returns a vector of output values. This function is unique in that the output values are not computed independently of one another. Mathematically, the outputs of softmax always sum to exactly one, but in practice the sum of the output values will be close to but not exactly equal to one. The outputs of softmax can be interpreted as probabilities, and can be used, for example, with Conx's `choice` function."
+    "The `softmax` activation function takes a vector of input values and returns a vector of output values. This function is unique in that the output values are not computed independently of one another. Mathematically, the outputs of softmax always sum to exactly one, but in practice the sum of the output values will be close to but not exactly equal to one. The outputs of softmax can be interpreted as probabilities, and can be used, for example, with ConX's `choice` function."
    ]
   },
   {
