--- a/Auto-encoder with Conv2D.ipynb
+++ b/Auto-encoder with Conv2D.ipynb
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "Using Theano backend.\n",
-      "Conx, version 3.6.0\n"
+      "ConX, version 3.6.0\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, that gives a warning. Conx does not allow targets to have a shape, so we flatten them:"
+    "However, that gives a warning. ConX does not allow targets to have a shape, so we flatten them:"
    ]
   },
   {
