--- a/CIFAR10_CNN.ipynb
+++ b/CIFAR10_CNN.ipynb
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.0\n"
+      "ConX, version 3.6.0\n"
      ]
     }
    ],
