--- a/Datasets.ipynb
+++ b/Datasets.ipynb
@@ -46,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Conx, version 3.6.0\n"
+      "ConX, version 3.6.0\n"
      ]
     }
    ],
@@ -1132,7 +1132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see/access the internal format, use the underscore before inputs or targets. This is a numpy array. conx is designed so that you need not have to use numpy for most network operations."
+    "To see/access the internal format, use the underscore before inputs or targets. This is a numpy array. ConX is designed so that you need not have to use numpy for most network operations."
    ]
   },
   {
@@ -1556,7 +1556,7 @@
     "Class methods:\n",
     "\n",
     "* Dataset.datasets() - get a list of all known datasets\n",
-    "* Dataset.get(name) - get a named dataset and return a Conx Dataset\n",
+    "* Dataset.get(name) - get a named dataset and return a ConX Dataset\n",
     "* summary() - display a summary of the dataset\n",
     "\n",
     "Instance methods:\n",
