--- a/Getting Started with conx.ipynb
+++ b/Getting Started with conx.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting Started with Conx\n",
+    "# Getting Started with ConX\n",
     "\n",
-    "## What is conx?\n",
+    "## What is ConX?\n",
     "\n",
-    "Conx is an accessible and powerful way to build and understand deep learning neural networks. Specifically, it sits on top of Keras, which sits on top of TensorFlow, CNTK, or Theano (though Theano is no longer being developed). \n",
+    "ConX is an accessible and powerful way to build and understand deep learning neural networks. Specifically, it sits on top of Keras, which sits on top of TensorFlow, CNTK, or Theano (though Theano is no longer being developed). \n",
     "\n",
-    "Conx:\n",
+    "ConX:\n",
     "\n",
     "* has an easy to use interface for creating connections between layers of a neural network\n",
     "* adds additional functionality for manipulating neural networks\n",
@@ -18,7 +18,7 @@
     "* has everything you need; doesn't require knowledge of complicated numerical or plotting libraries\n",
     "* integrates with lower-level (Keras) if you wish\n",
     "\n",
-    "But rather than attempting to explain each of these points, let's demonstrate them. There are 8 steps needed to construct and use a conx network:\n",
+    "But rather than attempting to explain each of these points, let's demonstrate them. There are 8 steps needed to construct and use a ConX network:\n",
     "\n",
     "1. import conx\n",
     "2. create the network\n",
@@ -29,7 +29,7 @@
     "7. train the network\n",
     "8. test/analyze the network\n",
     "\n",
-    "This demonstration is being run in a Jupyter Notebook. Conx doesn't require running in the notebook, but if you do, you will be able to use the visualizations and dashboard."
+    "This demonstration is being run in a Jupyter Notebook. ConX doesn't require running in the notebook, but if you do, you will be able to use the visualizations and dashboard."
    ]
   },
   {
@@ -67,7 +67,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.10\n"
+      "ConX, version 3.6.10\n"
      ]
     }
    ],
@@ -246,7 +246,7 @@
    "source": [
     "#### Option: inspect the initial weights\n",
     "\n",
-    "Networks in conx are initialized with small random weights in the range -1..1. Each unit in a layer is also give a bias, which is initialized to 0.  A bias is trained, just as the weights, and is added in when calculating a unit's incoming activation.  Once trained, the bias provides each unit with a default activation value in the absence of other inputs.\n",
+    "Networks in ConX are initialized with small random weights in the range -1..1. Each unit in a layer is also give a bias, which is initialized to 0.  A bias is trained, just as the weights, and is added in when calculating a unit's incoming activation.  Once trained, the bias provides each unit with a default activation value in the absence of other inputs.\n",
     "\n",
     "You can inspect the weights coming into a layer, as shown below."
    ]
@@ -1293,7 +1293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conx has a number of methods for visualizing images. In this example below, we get each picture of the network as an \"image\" and give the list of images to `cx.view`. "
+    "ConX has a number of methods for visualizing images. In this example below, we get each picture of the network as an \"image\" and give the list of images to `cx.view`. "
    ]
   },
   {
@@ -1320,7 +1320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## conx options"
+    "## ConX options"
    ]
   },
   {
