--- a/LSTM Text Generation.ipynb
+++ b/LSTM Text Generation.ipynb
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.7.3\n"
+      "ConX, version 3.7.3\n"
      ]
     }
    ],
