--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.1\n"
+      "ConX, version 3.6.1\n"
      ]
     }
    ],
@@ -1693,7 +1693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, we can use the `net.plot_activation_map()` method that Lisa introduced in the \"Getting Started with Conx\" notebook.\n",
+    "Also, we can use the `net.plot_activation_map()` method that Lisa introduced in the \"Getting Started with ConX\" notebook.\n",
     "\n",
     "Recall that the method will sample from the range of possible inputs of two units of an input layer, and will show you a \"heatmap\" of the resulting activation of one unit in any hidden or output layer. \n",
     "\n",
