--- a/Plot3D.ipynb
+++ b/Plot3D.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Plotting in 3D\n",
     "\n",
-    "This notebook demonstrates plotting 3D data in Conx."
+    "This notebook demonstrates plotting 3D data in ConX."
    ]
   },
   {
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.0\n"
+      "ConX, version 3.6.0\n"
      ]
     }
    ],
