--- a/PlotExample.ipynb
+++ b/PlotExample.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.10\n"
+      "ConX, version 3.6.10\n"
      ]
     }
    ],
