--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook demonstrates some of Conx's functions for visualizing the behavior of networks. First, let's create a simple XOR network to explore."
+    "This notebook demonstrates some of ConX's functions for visualizing the behavior of networks. First, let's create a simple XOR network to explore."
    ]
   },
   {
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.1\n"
+      "ConX, version 3.6.1\n"
      ]
     }
    ],
