--- a/Utilities.ipynb
+++ b/Utilities.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Utilities\n",
     "\n",
-    "This notebook demonstrates the Conx utility functions.\n",
+    "This notebook demonstrates the ConX utility functions.\n",
     "\n",
-    "First, we import the conx library:"
+    "First, we import the ConX library:"
    ]
   },
   {
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.1\n"
+      "ConX, version 3.6.1\n"
      ]
     }
    ],
