--- a/VGG16 and ImageNet.ipynb
+++ b/VGG16 and ImageNet.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "## Constructing the Network\n",
     "\n",
-    "First, we import the conx library:"
+    "First, we import the ConX library:"
    ]
   },
   {
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.8\n"
+      "ConX, version 3.6.8\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get a warning letting us know that this is a trained model, but no training history exists. That is because this model was trained outside of Conx."
+    "We get a warning letting us know that this is a trained model, but no training history exists. That is because this model was trained outside of ConX."
    ]
   },
   {
