--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "Using Theano backend.\n",
-      "Conx, version 3.6.0\n"
+      "ConX, version 3.6.0\n"
      ]
     }
    ],
