--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.0\n"
+      "ConX, version 3.6.0\n"
      ]
     }
    ],
