--- a/Face recognition.ipynb
+++ b/Face recognition.ipynb
@@ -17,7 +17,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.1\n"
+      "ConX, version 3.6.1\n"
      ]
     }
    ],
