--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.9\n"
+      "ConX, version 3.6.9\n"
      ]
     }
    ],
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's take a look at some input patterns. Typing ``mnist.inputs[0]`` returns a large nested list of numbers, which isn't a particularly useful way to view a pattern.  A better way is to use Conx's ``view`` function:"
+    "Now let's take a look at some input patterns. Typing ``mnist.inputs[0]`` returns a large nested list of numbers, which isn't a particularly useful way to view a pattern.  A better way is to use ConX's ``view`` function:"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conx allows us to refer to multiple input patterns using arbitrary indices:"
+    "ConX allows us to refer to multiple input patterns using arbitrary indices:"
    ]
   },
   {
@@ -643,7 +643,7 @@
     "\n",
     "<p><img src=\"mnist_mlp_picture.png\" width=\"50%\"></p>\n",
     "\n",
-    "To build this network in Conx, we first create a ``Network`` object, giving it the arbitrary name \"MNIST_MLP\", then add each ``Layer`` in order.  Finally, we create the connections between layers using the single command ``connect()``."
+    "To build this network in ConX, we first create a ``Network`` object, giving it the arbitrary name \"MNIST_MLP\", then add each ``Layer`` in order.  Finally, we create the connections between layers using the single command ``connect()``."
    ]
   },
   {
@@ -800,7 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The network summary shows the details for each layer, along with the total number of network parameters.  The underlying Keras model on which the network is based is directly available via the ``model`` property, although normally the Conx user does not need to worry about the lower Keras level."
+    "The network summary shows the details for each layer, along with the total number of network parameters.  The underlying Keras model on which the network is based is directly available via the ``model`` property, although normally the ConX user does not need to worry about the lower Keras level."
    ]
   },
   {
@@ -1738,7 +1738,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After training, the index of the largest output value in response to an input image corresponds to the network's digit classification.  To see this more clearly, we will make use of Conx's ``argmax`` function, which takes a list of numbers and returns the *position* of the largest number in the list (counting from 0).  For example, test input #42 is shown below, along with the network's response."
+    "After training, the index of the largest output value in response to an input image corresponds to the network's digit classification.  To see this more clearly, we will make use of ConX's ``argmax`` function, which takes a list of numbers and returns the *position* of the largest number in the list (counting from 0).  For example, test input #42 is shown below, along with the network's response."
    ]
   },
   {
