--- a/MNISTVisualizations.ipynb
+++ b/MNISTVisualizations.ipynb
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.5\n"
+      "ConX, version 3.6.5\n"
      ]
     }
    ],
