--- a/Robot Simulation.ipynb
+++ b/Robot Simulation.ipynb
@@ -342,7 +342,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.9\n"
+      "ConX, version 3.6.9\n"
      ]
     }
    ],
