--- a/Two-Spirals.ipynb
+++ b/Two-Spirals.ipynb
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.6.1\n"
+      "ConX, version 3.6.1\n"
      ]
     }
    ],
