--- a/VAE.ipynb
+++ b/VAE.ipynb
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "Conx, version 3.7.3\n"
+      "ConX, version 3.7.3\n"
      ]
     }
    ],
