Added subheadings to VirtualDatasets

--- a/VirtualDatasets.ipynb
+++ b/VirtualDatasets.ipynb
@@ -712,8 +712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    generator_ordered = True, load_batch_direct = False, with generator function() (showing another\n",
-    "    function style):"
+    "## generator_ordered = True, load_batch_direct = False, with generator function() (showing another function style)"
    ]
   },
   {
@@ -871,7 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    generator_ordered = False, load_batch_direct = False, with generator function():"
+    "## generator_ordered = False, load_batch_direct = False, with generator function()"
    ]
   },
   {
