First pass at bring notebooks up to date

--- a/MNISTVisualizations.ipynb
+++ b/MNISTVisualizations.ipynb
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "cnn.dataset.get(\"MNIST\")\n",
+    "cnn.get_dataset(\"MNIST\")\n",
     "cnn.dataset.split(10000)\n",
     "cnn.dataset.summary()"
    ]
