Bring up to date with latest changes to net.test()

--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -895,7 +895,7 @@
     }
    ],
    "source": [
-    "net.test(tolerance=0.4, show=True)"
+    "net.evaluate(tolerance=0.4, show=True)"
    ]
   },
   {
@@ -1910,7 +1910,7 @@
     }
    ],
    "source": [
-    "net.test(show_inputs=False, show_outputs=False, show=True)"
+    "net.evaluate(show_inputs=False, show_outputs=False, show=True)"
    ]
   },
   {
