--- a/Datasets.ipynb
+++ b/Datasets.ipynb
@@ -1107,7 +1107,7 @@
     }
    ],
    "source": [
-    "net.test(tolerance=.2, show=True)"
+    "net.evaluate(tolerance=.2, show=True)"
    ]
   },
   {
@@ -1886,7 +1886,7 @@
     }
    ],
    "source": [
-    "net.test(tolerance=.2, show=True)"
+    "net.evaluate(tolerance=.2, show=True)"
    ]
   },
   {
