--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -1564,7 +1564,7 @@
     }
    ],
    "source": [
-    "net.test(tolerance=0.4)"
+    "net.evaluate(tolerance=0.4)"
    ]
   },
   {
@@ -1637,7 +1637,7 @@
     }
    ],
    "source": [
-    "net.plot_activation_map(scatter=net.test(interactive=False), symbols=symbols, title=\"Before Training\")"
+    "net.plot_activation_map(scatter=net.evaluate_and_label(), symbols=symbols, title=\"Before Training\")"
    ]
   },
   {
@@ -3005,7 +3005,7 @@
     }
    ],
    "source": [
-    "cx.scatter(net.test(interactive=False))"
+    "cx.scatter(net.evaluate_and_label())"
    ]
   },
   {
@@ -3025,7 +3025,7 @@
     }
    ],
    "source": [
-    "net.plot_activation_map(scatter=net.test(interactive=False), symbols=symbols, title=\"After Training\")"
+    "net.plot_activation_map(scatter=net.evaluate_and_label(), symbols=symbols, title=\"After Training\")"
    ]
   },
   {
