--- a/Robot Simulation.ipynb
+++ b/Robot Simulation.ipynb
@@ -643,7 +643,7 @@
     }
    ],
    "source": [
-    "net.test()"
+    "net.evaluate()"
    ]
   },
   {
@@ -723,7 +723,7 @@
     }
    ],
    "source": [
-    "net.test(show=True)"
+    "net.evaluate(show=True)"
    ]
   },
   {
