--- a/collections/odsc-2018/01_Agenda.ipynb
+++ b/collections/odsc-2018/01_Agenda.ipynb
@@ -19,34 +19,26 @@
    "source": [
     "**Agenda**\n",
     "\n",
-    "1. [Getting Started](01_Getting_Started.ipynb) - (10 minutes) 2:00-2:10\n",
-    "2. [Getting Started with ConX](../../Getting%20Started%20with%20conx.ipynb) - (30 minutes) 2:10-2:40\n",
-    "3. [Handwritten digit recognition](../../MNIST.ipynb) - (30 Minutes) 2:40-3:10\n",
-    "4. Utilities - (20 Minutes) 3:10-3:35\n",
+    "The slides are available at: https://goo.gl/VKRz9Y\n",
+    "\n",
+    "1. [Introductions](01_Getting_Started.ipynb) - (45 minutes) 2:00-2:45\n",
+    "2. [Getting Started with ConX](../../Getting%20Started%20with%20conx.ipynb) - (45 minutes) 2:45-3:30\n",
+    "3. Coffee Break - (15 minutes) 3:30-3:45\n",
+    "4. [Handwritten digit recognition](../../MNIST.ipynb) - (45 Minutes) 3:45-4:30\n",
+    "5. Datasets and Utilities - (30 Minutes) 4:30-5:00\n",
     "    * [Time Travel and Making movies](../../Learning.ipynb)\n",
     "    * [Plotting](../../Plotting.ipynb)\n",
-    "    * [Reference](../../Utilities.ipynb)\n",
-    "5. Coffee Break - (15 minutes) 3:30-3:45\n",
-    "6. Datasets - (30 minutes) 3:45-4:15\n",
     "    * [CMU Faces](../../Face%20recognition.ipynb) - faces and poses\n",
     "    * [CIFAR](../../CIFAR10_CNN.ipynb) - 10 and 100 object recognition\n",
     "    * [Fingers](../../work-in-progress/FingersDataset.ipynb) - fingers and counts\n",
-    "7. Other Models (30 minutes) 4:15-4:45\n",
+    "6. Other Models (10 minutes) 5:00-5:10\n",
     "    * [Robot Simulation](../../Robot%20Simulation.ipynb)\n",
     "    * [Text Prediction and Generation](../../Predicting and Generating Texts.ipynb) - text generation\n",
     "    * [Recommending Movies](../../RecommendingMovies.ipynb)\n",
     "    * [AlphaZero](../../work-in-progress/AlphaZero.ipynb) - best game-playing program in the world\n",
     "    * [Deep Dreams](../../work-in-progress/DeepDreams.ipynb) - generate images\n",
-    "7. Keeping Track of Experiments (30 minutes) 4:15-4:45\n",
-    "8. Review and Discussion (45 minutes) 4:45-5:30"
+    "7. Review and Discussion (20 minutes) 5:10-5:30"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -65,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
