--- a/collections/odsc-east-2019/00_Setup.ipynb
+++ b/collections/odsc-east-2019/00_Setup.ipynb
@@ -37,7 +37,9 @@
     "## 4. Local Install\n",
     "\n",
     "* Use Anaconda, plus pip installs\n",
-    "* Generic Python3 environment"
+    "* Generic Python3 environment\n",
+    "\n",
+    "See **github.com/Calysto/conx-notebooks/tree/master/HowToRun** for details on local installations."
    ]
   },
   {
@@ -152,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
