Cece's versions, and comet.config

--- a/collections/odsc-east-2019/00_Setup.ipynb
+++ b/collections/odsc-east-2019/00_Setup.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>A Deeper Stack for Deep Learning: <br/>\n",
+    "<h1>Setup — A Deeper Stack for Deep Learning: <br/>\n",
     "Adding Visualizations and Data Abstractions to your Workflow</h1>\n",
     "\n",
     "You should have picked one of the 4 following options, summarized below:\n",
@@ -24,7 +24,7 @@
     "* Use our VirtualBox image: \n",
     "  * **science.slc.edu/jmarshall/virtualbox-conx-3.7.5.ova**\n",
     "\n",
-    "## 3. Jupyter in the Cloud + pip conx\n",
+    "## 3. Jupyter in the Cloud + pip conx comet-ml\n",
     "\n",
     "Each of these will require that you install conx, and do some other setup:\n",
     "\n",
@@ -36,7 +36,7 @@
     "\n",
     "## 4. Local Install\n",
     "\n",
-    "* Use Anaconda, plus pip installs\n",
+    "* Use Anaconda, plus `pip install comet-ml conx`\n",
     "* Generic Python3 environment\n",
     "\n",
     "See **github.com/Calysto/conx-notebooks/tree/master/HowToRun** for details on local installations."
@@ -50,7 +50,7 @@
     "\n",
     "\n",
     "\n",
-    "# Checkpoint #1: Conx is Installed and Usable\n",
+    "# Checkpoint #1: Conx and Comet.ml are Installed and Usable\n",
     "\n",
     "VirtualBox users:\n",
     "\n",
@@ -86,6 +86,77 @@
     "```\n",
     "Using TensorFlow backend.\n",
     "Conx, version 3.7.5\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, enter `from comet_ml import Experiment` and press `Shift+Return`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from comet_ml import Experiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell should run successfully. To instantiate your Experiment, replace the placeholdes below with your Comet API Key, project name and workspace name and run the cell.\n",
+    "\n",
+    "> For reference: see the Comet.ml Quick Start Guide [here](https://www.comet.ml/docs/quick-start/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment = Experiment(\"INSERT-API-KEY-HERE\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should see:\n",
+    "\n",
+    "```\n",
+    "COMET INFO: Experiment is live on comet.ml https://www.comet.ml/...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another option is to create a config file with your Comet account details. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Get an account at comet.ml\n",
+    "2. Login and click on the general Project\n",
+    "3. Click on the `API key` button in the upper righthand corner (it is now copied into your clipboard)\n",
+    "4. Put the following in a cell, replacing the `...` with your API key (no quotes)\n",
+    "5. Press `SHIFT+Return`\n",
+    "\n",
+    "```python\n",
+    "%writefile ~/.comet.config\n",
+    "\n",
+    "[comet]\n",
+    "\n",
+    "api_key = INSERT-YOUR-API-KEY-HERE\n",
     "```"
    ]
   },
