--- a/collections/odsc-east-2019/02_Getting_Started.ipynb
+++ b/collections/odsc-east-2019/02_Getting_Started.ipynb
@@ -42,7 +42,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Doug Blank**: Bryn Mawr College, [doug.blank@gmail.com](mailto:doug.blank@gmail.com), [@dougblank](https://twitter.com/DougBlank), [me-robot.blog](http://me-robot.blog/)"
+    "* **Doug Blank**: Bryn Mawr College, [doug.blank@gmail.com](mailto:doug.blank@gmail.com), [@dougblank](https://twitter.com/DougBlank), [me-robot.blog](http://me-robot.blog/)\n",
+    "* **Cecelia Shao**: Comet.ml, [cecelia@comet.ml](mailto:cecelia@comet.ml), [@CeceliaShao](https://twitter.com/CeceliaShao)"
    ]
   },
   {
@@ -159,20 +160,40 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.4 Introducing Comet.ml\n",
+    "\n",
+    "Comet.ml is doing for ML what GitHub did for code. We allow data science teams to automagically track their datasets, code changes, experimentation history and production models creating efficiency, transparency, and reproducibility.\n",
+    "\n",
+    "We all strive to be data driven and yet every day valuable experiments results are just lost and forgotten. Comet.ml provides a dead simple way of fixing that. \n",
+    "\n",
+    "\n",
+    "Comet.ml is designed to be:\n",
+    "- **automatic** - low friction to your current workflow.\n",
+    "- **flexible** - works with any workflow, any ML task, any machine, and any piece of code \n",
+    "- **scalable** - supports large quantities of reported experiments \n",
+    "- **collaborative** - enable discussion and shared work among collaborators \n",
+    "\n",
+    "Sign up at: www.comet.ml\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## 1.4 Preferred Environment"
+    "## 1.5 Preferred Environment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Jupyter Notebooks**"
+    "### Jupyter Notebooks"
    ]
   },
   {
@@ -204,10 +225,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from comet_ml import Experiment "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE: *we will use this form for importing `conx` through this workshop.*\n",
+    "NOTE: *we will use this form for importing `conx` and `comet_ml` through this workshop.*\n",
     "\n",
     "Jupyter notebooks operate in a modal manner (like vi).\n",
     "\n",
@@ -245,7 +275,9 @@
     "\n",
     "* In Python, you can use `help(ITEM)` to get more information on an object, function, module, or method.\n",
     "* The Conx online help is searchable:\n",
-    "   * http://conx.readthedocs.io/en/latest/ "
+    "   * http://conx.readthedocs.io/en/latest/ \n",
+    "* See detailed examples and documentation for Comet.ml:\n",
+    "   * https://www.comet.ml/docs"
    ]
   },
   {
@@ -274,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
